# website

./: .gitignore  LICENSE
client/: blog.html  bower.json  code.html  contact.html  index.html
client/css/: pure.css
posts/io/haskell/: haskell.cabal  shell.nix
posts/io/haskell/app/: Main.hs
posts/io/java/: IO.java
scripts/: build.sh
server/: Cargo.toml  default.nix  server.cabal  shell.nix
server/app/: Main.hs
server/src/: Api.hs  App.hs  Models.hs  Types.hs  main.rs
