name:                haskell
version:             0.1.0.0
synopsis:            Haskell Side of the IO tutorial
description:         Please see README.md
homepage:            https://github.com/mckeankylej/website#readme
license:             BSD3
license-file:        ../../../LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/website
